--- a/styles.css
+++ b/styles.css
@@ -643,7 +643,7 @@ small {
 	position: absolute;
 	background: rgba(42, 137, 0, 0.54);
 	top: 10%;
-	left: 3%;
+	left: 4%;
 	right: 0%;
 	bottom: 0%;
 	width: 9rem;
